4.6.1
=====
- Migrate launcher category icons from 4.4 panels (bug #5067).
- Fix compilation with -Wl,--as-needed (bug #5103).
- Don't crash when the quit action button is pressed (bug #5118).
- Properly set the systray orientation property (bug #5149).
- Fix xfce-hvbox not working with gtk 2.16 (bug #5166).
- Don't crash the launcher plugin when the launcher entry list is empty.


4.6.0
======
- Block panel autohide if the widget is grabbed (bug #4597).
- Fix dragging to launcher submenu items (bug #4026).
- Send the event time with startup notification instead
  of zero, so focus stealing works properly.
- Set the foreground color of the lcd clock (bug #4923).
- Don't escape the command when dropping a .desktop file in the
  launcher dialog (bug #4818).


4.5.99.1
========
- Fixed extern char** environ is not defined on BSD platforms (bug #4834).


4.5.93
======
- Cache tooltip icons. Since gtk queries it a lot, resulting in too many
  open()'s for loading the pixbuf (bug #4614).
- Rebuild the plugin if the properties dialog is cancelled (bug #4612).
- Set DISPLAY variable so the launcher launches on the correct screen
  (bug #4654 and #4693)).
- Add missing functions in the symbols file (bug #4700).
- Added a libxfce4panel.h header that includes all other headers for
  plugin writers.
- Use -V for version information.
- Fix broken actions button when the panel orientation is changed (bug #4544).
- Fix a lot of compiler warnings with -Werror.
- Make all the labels mnemonic when possible.
- Lot of dialog tweaks when it comes to strings and spacing.
- New xfce4-panel icons.
- Use a location selector for the launcher dialog's working directory.
- Rename Pager to Workspace Switcher and Systray to Notification Area.


4.5.92
======
- Remove signal disconnect left after the patch of bug #4474.
- Fix xrandr problem so it's possible to change the panel's
  monitor after a monitor has been removed (bug #3620).
- Panel does not adhere to 'fullwidth' property when using 