@@ -6,6 +6,7 @@
 - Properly set the systray orientation property (bug #5149).
 - Fix xfce-hvbox not working with gtk 2.16 (bug #5166).
 - Don't crash the launcher plugin when the launcher entry list is empty.
+- Add icon-name fallback to the show desktop plugin (bug #5117).
 
 
 4.6.0
